// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HelloWorld > HelloWorld component renders correctly 1`] = `
<div>
  Hello, 
  World
  !
</div>
`;

exports[`HelloWorld > The name prop works 1`] = `
<div>
  Hello, 
  Universe
  !
</div>
`;
